# istok

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.agents/: AGENTS.md
.agents/roles/: claude.md  codex.md
.agents/skills/milestone_playbook/: SKILL.md
.agents/skills/no_std_rules/: SKILL.md
.agents/skills/protocol_testing/: SKILL.md
.agents/skills/rust_style/: SKILL.md
.codex/skills/: milestone_playbook.md  no_std_rules.md  protocol_testing.md  rust_style.md
.github/workflows/: ci.yml
crates/istok-core/: Cargo.toml
crates/istok-core/fuzz/: Cargo.toml
crates/istok-core/fuzz/fuzz_targets/: fuzz_frame_decode.rs  fuzz_varint_decode.rs
crates/istok-core/src/: h3.rs  lib.rs
crates/istok-h3/: Cargo.toml
crates/istok-h3/src/: engine.rs  h3_engine.rs  lib.rs  mock.rs
crates/istok-h3/tests/: m1_6_response_frames.rs  m1_boot_sends_settings.rs  m1_inbound_control_incremental.rs  m1_inbound_control_malformed_frame_header.rs  m1_inbound_control_malformed_uni_type_varint.rs  m1_inbound_control_post_settings_uni_regression.rs  m1_inbound_control_settings_accept.rs  m1_inbound_control_unexpected_first_frame.rs  m1_inbound_control_unexpected_uni_type.rs  m1_request_stream_active_buffer_cap.rs  m1_request_stream_data_before_control.rs  m1_request_stream_early_buffer_cap.rs  (+7 more)
crates/istok-http/: Cargo.toml
crates/istok-io-tokio/: Cargo.toml
crates/istok-server/: Cargo.toml
crates/istok-transport/: Cargo.toml
docs/: architecture.md  coding-standards.md  milestones.md  overview.md  testing.md
docs/rfcs/: 0001-template.md  0002-qpack-minimal.md
(+10 files in other folders)
